[project]
name = "comfyui-load-image-gallery"
description = "Adds a gallery to the Load Image node and tabs for Load Checkpoint/Lora/etc nodes"
version = "2.1"
# license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/OgreLemonSoup/ComfyUI-Load-Image-Gallery"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ogrelemonsoup"
DisplayName = "ComfyUI-Gallery-and-Tabs"
Icon = ""
